[package]
name = "genetic_ops"
version = "0.1.0"
edition = "2021"

[dependencies]
petgraph = { version = "0.6.5", optional = true }
rand = "0.10"
rand_distr = "0.6"
weighted_rand = "0.5"

[features]
petgraph = ["dep:petgraph"]

[patch.crates-io]
weighted_rand = { git = 'https://github.com/bionicles/weighted_rand.git' }
